# InFantasyShell

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO.md  muse.md  release-please-config.json
.github/: copilot-instructions.md
.github/instructions/: rust.instructions.md
.github/workflows/: release.yml
data/: world.examples.yaml
src/: cmd.rs  context.rs  main.rs  system.rs  utils.rs  vfs.rs
src/cmd/: command.rs  context.rs  inbuilt.rs  output.rs  parser.rs  runtime.rs  terminal.rs
src/cmd/inbuilt/: cat.rs  cd.rs  chmod.rs  clear.rs  echo.rs  exit.rs  ls.rs  pwd.rs  rm.rs
src/cmd/output/: color.rs  format.rs
src/system/: bit.rs  cpu.rs  error.rs  memory.rs  network.rs  permission.rs  storage.rs
src/system/storage/: dir.rs  file.rs  init.rs  node.rs  pool.rs
src/vfs/: fs.rs
