[package]
name = "InFantasyShell"
version = "0.0.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "^1.51.1", features = ["full"] }
unicode-width = "0.2.2"
